Fix overheight issue; no scrollbar by default.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 .main {
     position: relative;
-    min-height: calc(100vh - var(--header-height) - var(--footer-height));
+    min-height: calc(100vh - var(--header-height) - var(--footer-height) - var(--gap) * 2 - 9px);
     max-width: calc(var(--main-width) + var(--gap) * 2);
     margin: auto;
     padding: var(--gap)
