--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -6,7 +6,7 @@
 
 html {
     -webkit-tap-highlight-color: transparent;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 a {
